# egypt

./: .gitignore  Cargo.toml  index.html  pkgs.nix  shell.nix
.github/workflows/: continuous_deployment.yml
sample-data/: Example_SemiStructured.xes
src/: lib.rs  parser.rs
src/dependency_types/: dependency.rs  existential.rs  mod.rs  temporal.rs
